--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "react-search-box": "^2.2.1",
     "react-select-country-list": "^2.2.3",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
